--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Testbench's page</h1>
+        <h1>Naufal's page</h1>
     </header>
     <div class="row-nav">
         <ul>
