--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#L1">Porto</a>
                 </ul>
                 <ul class="bydesc">
-                    <a href="#L2">Description</a>
+                    <a href="#L2">Social Media</a>
                 </ul>
                 </div>
             </button>
