--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <li>
             <button class="a"><h3 class="A">More</h3>
                 <div class="listmenu">                
-                <ul class="bycode">
+                <ul class="bycode" style="font-weight: bold;">
                     <a href="#L1">Porto</a>
                 </ul>
-                <ul class="bydesc">
+                <ul class="bydesc" style="font-weight: bold;">
                     <a href="#L2">Social Media</a>
                 </ul>
                 </div>
