--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="gameops"><a href="https://github.com/Naufal453/Gameops.git" >GameOps</a></li>
                     <li class="easyphp"><a href="https://github.com/Naufal453/Easyphp.git" >EasyPhp</a></li>
                     <li class="A3"><a href="https://github.com/Naufal453/TugasPIPL.git" >Alternate Universe Web</a></li>
-                    <li class="ME"><a href="https://testbench.my.id" >This Web</a></li>
+                    <li class="ME"><a href="naufal453.github.io" >This Web</a></li>
                 </ul>
             </div>
             <h2 class="Lkami">You can contact me via</h2>
