--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li class="easyphp"><a href="https://github.com/Naufal453/Easyphp.git" >EasyPhp</a></li>
                     <li class="A3"><a href="https://github.com/Naufal453/TugasPIPL.git" >Alternate Universe Web</a></li>
                     <li class="ME"><a href="naufal453.github.io" >This Web</a></li>
-                    <li class="ME"><a href="./other/drivers" >others</a></li>
+                    <li class="ME"><a href="./other" >others</a></li>
                 </ul>
             </div>
             <h2 class="Lkami">You can contact me via</h2>
