--- a/other/drivers/index.html
+++ b/other/drivers/index.html
@@ -1,45 +1,78 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Driver Advan</title>
+    <title>Daftar dengan Tautan yang Menarik</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
     body {
-        font-family: Arial, sans-serif;
+        font-family: 'Arial', sans-serif;
+        background-color: #f4f4f4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+    }
+
+    .container {
+        background: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        overflow: hidden;
+        width: 300px;
     }
 
     .list {
-        list-style-type: none;
+        list-style: none;
         padding: 0;
         margin: 0;
     }
 
     .list li {
-        margin: 10px 0;
+        border-bottom: 1px solid #ddd;
+    }
+
+    .list li:last-child {
+        border-bottom: none;
     }
 
     .list li a {
         text-decoration: none;
-        color: #007BFF;
+        color: #333;
         font-size: 18px;
-        padding: 10px;
-        display: block;
-        border-radius: 5px;
-        transition: background-color 0.3s ease, color 0.3s ease;
+        display: flex;
+        align-items: center;
+        padding: 15px;
+        transition: background 0.3s, color 0.3s;
+    }
+
+    .list li a i {
+        margin-right: 10px;
+        color: #007BFF;
+        transition: color 0.3s;
     }
 
     .list li a:hover {
-        background-color: #007BFF;
+        background: #007BFF;
         color: #fff;
     }
+
+    .list li a:hover i {
+        color: #fff;
+    }
+
     </style>
 </head>
 <body>
-    <ul class="list">
-        <li><a href="https://www.example.com">Example 1</a></li>
-        <li><a href="https://www.example.com">Example 2</a></li>
-        <li><a href="https://www.example.com">Example 3</a></li>
-        <li><a href="https://www.example.com">Example 4</a></li>
-    </ul>
+    <div class="container">
+        <ul class="list">
+            <li><a href="https://www.example.com"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="https://www.example.com"><i class="fas fa-info-circle"></i> About</a></li>
+            <li><a href="https://www.example.com"><i class="fas fa-envelope"></i> Contact</a></li>
+            <li><a href="https://www.example.com"><i class="fas fa-globe"></i> Services</a></li>
+        </ul>
+    </div>
 </body>
 </html>
