--- a/other/drivers/index.html
+++ b/other/drivers/index.html
@@ -6,72 +6,70 @@
     <title>Daftar dengan Tautan yang Menarik</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-    body {
-        font-family: 'Arial', sans-serif;
-        background-color: #f4f4f4;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-    }
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
 
-    .container {
-        background: #fff;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        overflow: hidden;
-        width: 300px;
-    }
+        .container {
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+            width: 300px;
+        }
 
-    .list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
+        .list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
 
-    .list li {
-        border-bottom: 1px solid #ddd;
-    }
+        .list li {
+            border-bottom: 1px solid #ddd;
+        }
 
-    .list li:last-child {
-        border-bottom: none;
-    }
+        .list li:last-child {
+            border-bottom: none;
+        }
 
-    .list li a {
-        text-decoration: none;
-        color: #333;
-        font-size: 18px;
-        display: flex;
-        align-items: center;
-        padding: 15px;
-        transition: background 0.3s, color 0.3s;
-    }
+        .list li a {
+            text-decoration: none;
+            color: #333;
+            font-size: 18px;
+            display: flex;
+            align-items: center;
+            padding: 15px;
+            transition: background 0.3s, color 0.3s;
+        }
 
-    .list li a i {
-        margin-right: 10px;
-        color: #007BFF;
-        transition: color 0.3s;
-    }
+        .list li a i {
+            margin-right: 10px;
+            color: #007BFF;
+            transition: color 0.3s;
+        }
 
-    .list li a:hover {
-        background: #007BFF;
-        color: #fff;
-    }
+        .list li a:hover {
+            background: #007BFF;
+            color: #fff;
+        }
 
-    .list li a:hover i {
-        color: #fff;
-    }
-
+        .list li a:hover i {
+            color: #fff;
+        }
     </style>
 </head>
 <body>
+    <h3>Drivers Workplus</h3>
     <div class="container">
         <ul class="list">
-            <li><a href="https://www.example.com"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="https://www.example.com"><i class="fas fa-info-circle"></i> About</a></li>
-            <li><a href="https://www.example.com"><i class="fas fa-envelope"></i> Contact</a></li>
-            <li><a href="https://www.example.com"><i class="fas fa-globe"></i> Services</a></li>
+            <li><a href="https://www.example.com"><i class="fas fa-home"></i>Drivers</a></li>
+            <li><a href="https://www.example.com"><i class="fas fa-info-circle"></i>Soon</a></li>
         </ul>
     </div>
 </body>
