--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
         .section {
             margin-left: 380px;
-            height: 100vh;
+            min-height: 100vh;
+            /* Changed from height to min-height */
             padding: 4rem;
             display: flex;
             flex-direction: column;
@@ -91,9 +92,29 @@
         }
 
         a {
-            color: blue;
-            text-decoration: none;
+            color: white;
             /* no underline */
+        }
+
+        /* Update footer styles to act as spacer */
+        footer {
+            margin-left: 380px;
+            height: 5px;
+            /* Reduced height for spacing */
+            background-color: transparent;
+            /* Remove background */
+            border: none;
+            /* Remove border */
+        }
+
+        footer p {
+            display: none;
+            /* Hide footer content */
+        }
+
+        .nav-link {
+            color: #ffffff;
+            padding-left: 10px;
         }
     </style>
 </head>
@@ -108,7 +129,7 @@
             <nav class="nav flex-column mt-4">
                 <a class="nav-link active" href="#about">About</a>
                 <a class="nav-link" href="#experience">Experience</a>
-                <a class="nav-link" href="#projects">Projects</a>
+                <a class="nav-link" href="#projects">Portofolio</a>
             </nav>
         </div>
         <div class="social-icons">
@@ -121,20 +142,20 @@
     </div>
 
     <section id="about" class="section">
-        <h2>About</h2>
+        <h2 id="title">About</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum nulla eu nunc commodo, vel laoreet
             justo posuere. Donec id est ut nulla porttitor convallis.</p>
     </section>
 
     <section id="experience" class="section">
-        <h2>Experience</h2>
+        <h2 id="title">Experience</h2>
         <p>Worked on various frontend projects at TechNova Inc., focused on building design systems, optimizing
             accessibility, and collaborating with product teams. Previous experience includes projects at PixelForge and
             BrightPath Labs.</p>
     </section>
 
     <section style="list-style: none;" id="projects" class="section">
-        <h2>Projects</h2>
+        <h2 id="title">Portofolio</h2>
         <li>
             <h5><a href="https://github.com/naufal453/Alternate-Arc-Archive3.git">Alternate Arc Archive</a></h5>
             <td style="padding-top: 10px;"></td><img width="600px"
@@ -147,6 +168,15 @@
                 style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/gui.png" alt="">
         </li>
     </section>
+    <footer>
+        <!-- Empty footer acting as spacer -->
+    </footer>
+    <footer>
+        <div class="text-center py-4">
+            <p>&copy; 2023 Naufal Alamsyah. All rights reserved.</p>
+            <p>Made with <i class="fas fa-heart"></i> using HTML, CSS, and JavaScript</p>
+        </div>
+    </footer>
     <script>
         const sections = document.querySelectorAll('.section');
         const navLinks = document.querySelectorAll('.nav-link');
