--- a/index.html
+++ b/index.html
@@ -157,13 +157,14 @@
     <section style="list-style: none;" id="projects" class="section">
         <h2 id="title">Portofolio</h2>
         <li>
-            <h5><a href="https://github.com/naufal453/Alternate-Arc-Archive3.git">Alternate Arc Archive</a></h5>
+            <h5><a href="https://github.com/naufal453/Alternate-Arc-Archive3.git">Alternate Arc Archive (Laravel
+                    Web)</a></h5>
             <td style="padding-top: 10px;"></td><img width="600px"
                 style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/Untitled design.png" alt="">
         </li>
         <br>
         <li>
-            <h5><a href="https://github.com/naufal453/waywes-gui.git">Waywes GUI</a></h5>
+            <h5><a href="https://github.com/naufal453/waywes-gui.git">Waywes GUI (Linux)</a></h5>
             <td style="padding-top: 10px;"></td><img width="600px"
                 style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/gui.png" alt="">
         </li>
