--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Naufal Alamsyah</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/a2e0bf0c6b.js" crossorigin="anonymous"></script>
@@ -116,6 +117,173 @@
             color: #ffffff;
             padding-left: 10px;
         }
+
+        /* Media Queries for Responsive Design */
+        @media screen and (max-width: 768px) {
+            .sidebar {
+                position: static;
+                width: 100%;
+                height: auto;
+                padding: 2rem 1rem;
+                background-color: #0a192f;
+                border-bottom: 1px solid rgba(136, 146, 176, 0.2);
+                text-align: center;
+            }
+
+            .sidebar h1 {
+                font-size: 1.4rem;
+                margin-bottom: 0.5rem;
+                text-align: center;
+            }
+
+            .sidebar h2 {
+                font-size: 1rem;
+                margin-bottom: 0.5rem;
+                text-align: center;
+            }
+
+            .sidebar p {
+                font-size: 0.9rem;
+                margin-bottom: 1rem;
+                text-align: center;
+            }
+
+            /* Hide navigation on mobile */
+            .nav.flex-column {
+                display: none;
+            }
+
+            .section {
+                margin-left: 0;
+                padding: 2rem 1.5rem;
+                text-align: center;
+            }
+
+            .section h2 {
+                text-align: center;
+            }
+
+            .section p {
+                text-align: center;
+                margin: 0 auto;
+            }
+
+            /* Center portfolio items */
+            #projects li {
+                text-align: center;
+                margin-bottom: 2.5rem;
+            }
+
+            #projects h5 {
+                text-align: center;
+            }
+
+            /* Improve portfolio images for tablets */
+            #projects img {
+                width: 100%;
+                max-width: 500px;
+                height: auto;
+                margin: 1rem auto;
+                border-radius: 12px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            }
+
+            /* Center social icons */
+            .social-icons {
+                text-align: center;
+                padding: 1rem 0;
+                margin-top: 1rem;
+            }
+
+            .social-icons a {
+                margin: 0 0.8rem;
+            }
+
+            footer {
+                margin-left: 0;
+                padding: 2rem 1rem;
+                border-top: 1px solid rgba(136, 146, 176, 0.2);
+                display: none;
+            }
+
+            footer p {
+                display: block;
+                font-size: 0.8rem;
+                color: #8892b0;
+                text-align: center;
+            }
+        }
+
+        /* Additional tweaks for very small screens */
+        @media screen and (max-width: 480px) {
+            .sidebar {
+                padding: 1.5rem 1rem;
+            }
+
+            .section {
+                padding: 1.5rem 1rem;
+            }
+
+            .sidebar h1 {
+                font-size: 1.2rem;
+            }
+
+            .nav.flex-column {
+                gap: 1rem;
+            }
+
+            .nav-link {
+                font-size: 0.85rem;
+                padding: 0.4rem 0.6rem;
+            }
+
+            .section h2 {
+                font-size: 1.5rem;
+            }
+
+            .section p {
+                font-size: 0.9rem;
+                line-height: 1.6;
+            }
+
+            #projects img {
+                width: 100%;
+                max-width: 320px;
+                height: auto;
+                margin: 0.8rem auto;
+                border-radius: 8px;
+            }
+
+            #projects li {
+                margin-bottom: 2rem;
+            }
+
+            #projects h5 {
+                font-size: 1.1rem;
+                margin-bottom: 0.8rem;
+            }
+        }
+
+        #scrollTop {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            font-size: 20px;
+            cursor: pointer;
+            display: none;
+            transition: all 0.3s ease;
+            z-index: 1000;
+        }
+
+        #scrollTop:hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
     </style>
 </head>
 
@@ -178,6 +346,9 @@
             <p>Made with <i class="fas fa-heart"></i> using HTML, CSS, and JavaScript</p>
         </div>
     </footer>
+
+    <button id="scrollTop" style="display: none;">↑</button>
+
     <script>
         const sections = document.querySelectorAll('.section');
         const navLinks = document.querySelectorAll('.nav-link');
@@ -204,8 +375,21 @@
         sections.forEach(section => {
             observer.observe(section);
         });
-    </script>
 
+        const scrollBtn = document.getElementById('scrollTop');
+
+        window.onscroll = function () {
+            if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+                scrollBtn.style.display = 'block';
+            } else {
+                scrollBtn.style.display = 'none';
+            }
+        };
+
+        scrollBtn.onclick = function () {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        };
+    </script>
 
 </body>
 
