--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <div class="sidebar">
         <div>
             <h1>Naufal Gastiadirrijal Fawwaz Alamsyah</h1>
-            <h2>Front End Engineer <br> Back End Engineer</h2>
+            <h2>Still Learning About Backend Engineer</h2>
             <p>I build accessible, pixel-perfect digital experiences for the web.</p>
             <nav class="nav flex-column mt-4">
                 <a class="nav-link active" href="#about">About</a>
