--- a/index.html
+++ b/index.html
@@ -295,8 +295,7 @@
             <h2>Still Learning About Backend Engineer</h2>
             <p>I build accessible, pixel-perfect digital experiences for the web.</p>
             <nav class="nav flex-column mt-4">
-                <a class="nav-link active" href="#about">About</a>
-                <a class="nav-link" href="#experience">Experience</a>
+                <a class="nav-link" href="#about">About</a>
                 <a class="nav-link" href="#projects">Portofolio</a>
             </nav>
         </div>
@@ -315,12 +314,7 @@
             justo posuere. Donec id est ut nulla porttitor convallis.</p>
     </section>
 
-    <section id="experience" class="section">
-        <h2 id="title">Experience</h2>
-        <p>Worked on various frontend projects at TechNova Inc., focused on building design systems, optimizing
-            accessibility, and collaborating with product teams. Previous experience includes projects at PixelForge and
-            BrightPath Labs.</p>
-    </section>
+
 
     <section style="list-style: none;" id="projects" class="section">
         <h2 id="title">Portofolio</h2>
@@ -332,10 +326,31 @@
         </li>
         <br>
         <li>
+            <h5><a href="https://github.com/naufal453/simplemotionpython.git">simplemotionpython</a></h5>
+            <td style="padding-top: 10px;"></td><img width="600px"
+                style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/motion.jpg" alt="">
+        </li>
+        <br>
+        <li>
+            <h5><a href="https://github.com/naufal453/desktop-file-creator.git">desktop-file-creator (Linux)</a></h5>
+            <td style="padding-top: 10px;"></td><img width="600px"
+                style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/create.jpeg" alt="">
+        </li>
+        <br>
+        <li>
             <h5><a href="https://github.com/naufal453/waywes-gui.git">Waywes GUI (Linux)</a></h5>
             <td style="padding-top: 10px;"></td><img width="600px"
                 style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/gui.png" alt="">
         </li>
+        <br>
+        <li>
+            <h5><a href="https://github.com/naufal453/Gameops.git">GameOps (Simple CLI Tools For Windows Game
+                    Optimizations)</a></h5>
+            <td style="padding-top: 10px;"></td><img width="600px"
+                style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/image.png" alt="">
+        </li>
+
+
     </section>
     <footer>
         <!-- Empty footer acting as spacer -->
@@ -350,27 +365,6 @@
     <button id="scrollTop" style="display: none;">↑</button>
 
     <script>
-        const sections = document.querySelectorAll('.section');
-        const navLinks = document.querySelectorAll('.nav-link');
-
-        const observer = new IntersectionObserver(
-            entries => {
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        const id = entry.target.getAttribute('id');
-                        navLinks.forEach(link => {
-                            link.classList.remove('active');
-                            if (link.getAttribute('href') === `#${id}`) {
-                                link.classList.add('active');
-                            }
-                        });
-                    }
-                });
-            },
-            {
-                threshold: 0.6  // Adjust for when a section is considered "active"
-            }
-        );
 
         sections.forEach(section => {
             observer.observe(section);
