--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
                 <a class="nav-link" href="#projects">Portofolio</a>
             </nav>
         </div>
-        <div class="social-icons">
+        <!-- <div class="social-icons">
             <a href="#"><i class="fab fa-github"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
             <a href="#"><i class="fab fa-codepen"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-goodreads-g"></i></a>
-        </div>
+        </div> -->
     </div>
 
     <section id="about" class="section">
