--- a/index.html
+++ b/index.html
@@ -310,8 +310,7 @@
 
     <section id="about" class="section">
         <h2 id="title">About</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum nulla eu nunc commodo, vel laoreet
-            justo posuere. Donec id est ut nulla porttitor convallis.</p>
+        <p>A 6th-semester Software Engineering student at Telkom University Surabaya with a strong passion for web and desktop application development using HTML, CSS, PHP, JavaScript, and Python. Of course, I still need to continue developing my skills in several programming languages and frameworks. My goal is to create applications that are user-friendly for non-technical users, easy to understand, and helpful for people in dealing with issues related to the use of information technology.</p>
     </section>
 
 
