--- a/index.html
+++ b/index.html
@@ -310,7 +310,11 @@
 
     <section id="about" class="section">
         <h2 id="title">About</h2>
-        <p>A 6th-semester Software Engineering student at Telkom University Surabaya with a strong passion for web and desktop application development using HTML, CSS, PHP, JavaScript, and Python. Of course, I still need to continue developing my skills in several programming languages and frameworks. My goal is to create applications that are user-friendly for non-technical users, easy to understand, and helpful for people in dealing with issues related to the use of information technology.</p>
+        <p>A 6th-semester Software Engineering student at Telkom University Surabaya with a strong passion for web and
+            desktop application development using HTML, CSS, PHP, JavaScript, and Python. Of course, I still need to
+            continue developing my skills in several programming languages and frameworks. My goal is to create
+            applications that are user-friendly for non-technical users, easy to understand, and helpful for people in
+            dealing with issues related to the use of information technology.</p>
     </section>
 
 
@@ -321,15 +325,15 @@
             <h5><a href="https://github.com/naufal453/Alternate-Arc-Archive3.git">Alternate Arc Archive (Laravel
                     Web)</a></h5>
             <td style="padding-top: 10px;"></td>
-            <p><a href="https://testbench.my.id">Preview</a></p>
+            <!-- <p><a href="https://testbench.my.id">Preview</a></p> -->
             <td style="padding-top: 10px;"></td><img width="600px"
-                style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/Untitled design.png" alt="">
+                style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/A3.png" alt="">
         </li>
         <br>
         <li>
-            <h5><a href="https://github.com/naufal453/simplemotionpython.git">simplemotionpython</a></h5>
+            <h5><a href="https://www.ruang-santri.com/">Ruang Santri</a></h5>
             <td style="padding-top: 10px;"></td><img width="600px"
-                style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/motion.jpg" alt="">
+                style="border-radius: 15px;border: #7c838f;border:solid;" src="./assets/ruang-santri.png" alt="">
         </li>
         <br>
         <li>
